Last Commit
- Now able to run without javafx installed outside project
- README.md done
- Minor change in Priority Queue